[package]
name = "wl-play"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.3.0"
wayland-client = { version = "0.29.5", features = ["dlopen"] }
wayland-protocols = { version = "0.29.5", features = ["client"] }
